--- a/content/reference/sequences.adoc
+++ b/content/reference/sequences.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :prevpagehref: datatypes
 :prevpagetitle: Datatypes
 :nextpagehref: transients
