add partitionv variants to sequences page

--- a/content/reference/sequences.adoc
+++ b/content/reference/sequences.adoc
@@ -48,7 +48,7 @@ Longer seq from a shorter seq: https://clojure.github.io/clojure/clojure.core-ap
 Seq with head-items missing: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/rest[rest] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/next[next] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/fnext[fnext] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nnext[nnext] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop[drop] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop-while[drop-while] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nthnext[nthnext] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/for[for]
 Seq with tail-items missing: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take[take] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take-nth[take-nth] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/take-while[take-while] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/butlast[butlast] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/drop-last[drop-last] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/for[for]
 Rearrangment of a seq: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/flatten[flatten] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reverse[reverse] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sort[sort] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/sort-by[sort-by] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/shuffle[shuffle]
-Create nested seqs: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/split-at[split-at] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/split-with[split-with] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition[partition] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-all[partition-all] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-by[partition-by]
+Create nested seqs: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/split-at[split-at] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/splitv-at[splitv-at] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/split-with[split-with] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition[partition] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-all[partition-all] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partition-by[partition-by] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partitionv[partitionv] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/partitionv-all[partitionv-all]
 Process each item of a seq to create a new seq: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/map[map] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/pmap[pmap] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/mapcat[mapcat] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/for[for] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/replace[replace] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reductions[reductions] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/map-indexed[map-indexed] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/seque[seque]
 
 === Using a seq
