add seqable? to sequences page

--- a/content/reference/sequences.adoc
+++ b/content/reference/sequences.adoc
@@ -54,6 +54,7 @@ Process each item of a seq to create a new seq: https://clojure.github.io/clojur
 === Using a seq
 
 [%hardbreaks]
+Check if a coll can produce a seq: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/seqable?[seqable?]
 Extract a specific-numbered item from a seq: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/first[first] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ffirst[ffirst] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nfirst[nfirst] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/second[second] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nth[nth] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/when-first[when-first] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/last[last] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/rand-nth[rand-nth]
 Construct a collection from a seq: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/zipmap[zipmap] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/into[into] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reduce[reduce] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/set[set] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/vec[vec] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/into-array[into-array] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/to-array-2d[to-array-2d] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/frequencies[frequencies] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/group-by[group-by]
 Pass items of a seq as arguments to a function: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/apply[apply]
